--- a/index.html
+++ b/index.html
@@ -1,35 +1,91 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
 <style>
 body  {
-    background-image: url("https://cdn.pixabay.com/photo/2015/06/24/15/45/computer-820281_1280.jpg");
-    background-repeat: no-repeat;
+    background: url("assets/images/IMG_1813.JPG") no-repeat center center fixed;
     background-size: cover;
 }
 
 .title {
-  font-size: 20px;
-  color: green;
-}
-
-.paragraph {
   font-size: 100px;
   color: white;
+  font-family: 'Yellowtail', cursive;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+  text-align: center;
+  animation-name: topFadeOut;
+  animation-duration: 5s;
+  position: absolute;
+  left: 2.5rem;
+  top: 5rem;
 }
 
-.random-picture {
-  height: 100px;
+/**
+.paragraph {
+  font-size: 20px;
+  color: white;
+  font-family: 'Yellowtail', cursive;
 }
+**/
+
+.animation-box {
+  width: 75%;
+  height: 27.5rem;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.animation-container {
+  width: 1000rem;
+  height: 30rem;
+}
+
+@keyframes topFadeOut {
+  0% {
+    position: absolute;
+    top: -3rem;
+    opacity: 0;
+  }
+  75% {
+    position: absolute;
+    top: 50%;
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+/**
+.first-text {
+  font-size: 4.4rem;
+  position: absolute;
+  left: 2.5rem;
+  top: 5rem;
+  opacity: 0;
+  animation-name: topFadeOut;
+  animation-duration: 5s;
+  color: white;
+}
+**/
+
+
 </style>
 </head>
 <body>
 
-<h1 class="title">Personal Website</h1>
+<!--<h1 class="title">Bowei Liu</h1> -->
 
 <p class="paragraph">Welcome World</p>
 
-<img class="random-picture" src="assets/images/a.png">
+<section class="animation-box">
+  <div class="title">Bowei Liu</div>
+</section>
 
 </body>
 </html>
