--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body  {
 
 <!--<h1 class="title">Bowei Liu</h1> -->
 
-<p class="paragraph">Welcome World</p>
+<!--<p class="paragraph">Welcome World</p> -->
 
 <section class="animation-box">
   <div class="title">Bowei Liu</div>
