--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     font-size: 200px;
     color: white;
     font-family: 'Yellowtail', cursive;
-    width: 50%;
     padding: 10px;
-    animation-name: topFadeOut;
+    animation-name: topFadeIn;
     animation-duration: 2s;
     position: absolute;
     left: 10rem;
     top: 5rem;
   }
+
 
   /**
   .paragraph {
@@ -34,21 +34,17 @@
   }
   **/
 
-  .animation-box {
+  .animation-box-title {
     width: 100rem;
-    height: 100rem;
+    height: 80rem;
     margin: 0 auto;
     overflow: hidden;
     position: relative;
     left: auto;
   }
 
-  .animation-container {
-    width: 100rem;
-    height: 10rem;
-  }
 
-  @keyframes topFadeOut {
+  @keyframes topFadeIn {
     0% {
       position: absolute;
       top: -3rem;
@@ -64,32 +60,25 @@
     }
   }
 
+
   .gallery-container {
-    width: 500px;
-    height: 500px;
-    position: relative;
-    left: 5rem
+    width: 100%;
+    height: 100%;
+    position: absolute;
   }
 
-
-  .intro {
-    font-size: 3rem;
-  }
-
-  .page-break {
-    page-break-before: always;
-  }
 
   </style>
 </head>
 <body>
 
 
-<section class="animation-box">
+<section class="animation-box-title">
   <div class="title">Bowei Liu</div>
+
 </section>
 
-<p class="intro" >- Student, Gamer, Photographer</p>
+
 
 <div class="page-break"></div>
 
@@ -106,15 +95,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="assets/images/IMG_1213.jpg" alt="Pic 1" style="width:100%;">
+        <img src="personal-web/assets/images/IMG_1213.JPG" alt="Pic 1" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="assets/images/IMG_1614.jpg" alt="Pic 2" style="width:100%;">
+        <img src="personal-web/assets/images/IMG_1614.JPG" alt="Pic 2" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="assets/images/IMG_2814.jpg" alt="Pic 3" style="width:100%;">
+        <img src="personal-web/assets/images/IMG_2814.JPG" alt="Pic 3" style="width:100%;">
       </div>
     </div>
 
