--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
   }
 
 
+
+
   </style>
 </head>
 <body>
@@ -75,35 +77,42 @@
 
 <section class="animation-box-title">
   <div class="title">Bowei Liu</div>
-
 </section>
 
 
 
 <div class="page-break"></div>
 
-<div class="gallery-container">
-  <h2>Gallery</h2>
+<div class="gallery-container-nature">
+  <h style="font-size:40px; color:white; font-family: 'Yellowtail', cursive;">Gallery</h>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="personal-web/assets/images/IMG_1213.JPG" alt="Pic 1" style="width:100%;">
+        <img src="assets/images/IMG_1213.JPG" alt="Beside the fall" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="personal-web/assets/images/IMG_1614.JPG" alt="Pic 2" style="width:100%;">
+        <img src="assets/images/IMG_1614.JPG" alt="Yunnan View" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="personal-web/assets/images/IMG_2814.JPG" alt="Pic 3" style="width:100%;">
+        <img src="assets/images/IMG_1129.JPG" alt="Yunnan Spring water" style="width:100%;">
+      </div>
+      <div class="item">
+        <img src="assets/images/IMG_1514.JPG" alt="Yunnan mountain village" style="width:100%;">
+      </div>
+      <div class="item">
+        <img src="assets/images/IMG_1355.JPG" alt="DEER" style="width:100%;">
       </div>
     </div>
 
