--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Yellowtail" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Damion|Bilbo+Swash+Caps" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="pse/css/reset.css">
   	<link rel="stylesheet" href="pse/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="pse/js/modernizr.js"></script>
     <style>
     body  {
@@ -20,52 +20,86 @@
         display: none;
     }
 
+    .nav {
+        top: 5px;
+        right: 10px;
+        position: absolute;
+        font-family: 'Damion', cursive;
+    }
+
     .title {
         font-size: 200px;
         color: white;
-        font-family: 'Yellowtail', cursive;
+        font-family: 'Damion', cursive;
         padding: 10px;
         animation-name: topFadeIn;
         animation-duration: 2s;
-        position: absolute;
-        left: 10rem;
         top: 5rem;
+        left: 20rem;
+        position: absolute;
+        text-align: center;
     }
 
 
     .animation-box-title {
-        width: 100rem;
-        height: 50rem;
+        width: 75rem;
+        height: 22rem;
         margin: 0 auto;
         overflow: hidden;
-        position: relative;
         left: auto;
     }
 
 
     @keyframes topFadeIn {
-      0% {
-        position: absolute;
-        top: -3rem;
-        opacity: 0;
-      }
-      75% {
-        position: absolute;
-        opacity: 1;
-      }
+        0% {
+          position: absolute;
+          top: -3rem;
+          opacity: 0;
+        }
+        75% {
+          position: absolute;
+          opacity: 1;
+        }
 
-      100% {
-        opacity: 1;
-      }
+        100% {
+          opacity: 1;
+        }
     }
 
 
     .gallery-container {
         width: 100%;
         height: 100%;
-        position: absolute;
     }
 
+    .basic-intro {
+        width: 100%;
+        height: 10px;
+    }
+
+    .basic-intro-p {
+        animation-name: FadeIn;
+        animation-duration: 4s;
+        font-family: 'Damion', cursive;
+        color: white;
+        font-size: 2em;
+        text-align: center;
+        margin-left: 10em;
+        margin-top: 1em;
+    }
+
+    @keyframes FadeIn {
+        0% {
+          opacity: 0;
+        }
+
+        50% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+    }
 
     </style>
 </head>
@@ -73,12 +107,17 @@
 
 <body data-hijacking="off" data-animation="fixed">
 
+<div class="nav">
+  <button type="button" class="btn cn-name-btn" style="color: white; background-color: #43516e">刘博为</button>
+  <button type="button" class="btn ap-btn" style="color: white; background-color: #43516e">Air Paul</button>
+</div>
+
 <section class="animation-box-title">
   <div class="title">Bowei Liu</div>
 </section>
 
 <section class="basic-intro">
-  <p class="basic-intro-p paragraphs">Welcome to Bowei's personal website</p>
+  <div class="basic-intro-p paragraphs">- Learner / Gamer / Photographer</div>
 
 <section class="student hidden">
   <p class="student-intro paragraphs">I am a second year student of University of Toronto,completing honor B.S.C degree</p>
