(In Process) deleted nav buttons, added href

--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
 
 <body data-hijacking="off" data-animation="fixed">
 
-<div class="nav">
-  <button type="button" class="btn cn-name-btn" style="color: white; background-color: #43516e">刘博为</button>
-  <button type="button" class="btn ap-btn" style="color: white; background-color: #43516e">Air Paul</button>
-</div>
+<nav class="nav">
+  <a class="cn-site" href="http://google.ca" style="color: white;">刘博为</a>
+  |
+  <a class="AP-site" href="http://baidu.com" style="color: white;">Air Paul</a>
+</nav>
 
 <section class="animation-box-title">
   <div class="title">Bowei Liu</div>
